<resources>
    <string name="app_name">SportQuizApp</string>
    <string name="quiz_title">Quiz</string>
    <string name="start_button">START</string>
    <string name="questions_title">QUESTIONS</string>
    <string name="timer">00:15</string>
    <string name="question">QUESTION</string>
    <string name="option1">option1</string>
    <string name="option2">option2</string>
    <string name="option3">option3</string>
    <string name="option4">option4</string>
    <string name="result_title">RESULT</string>
    <string name="correct_ans">10</string>
    <string name="slash">/</string>
    <string name="total_ans">10</string>
    <string name="performance_title">PERFORMANCE</string>
</resources>