<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/card_background"
    android:padding="10dp"
    android:layout_margin="20dp"
    tools:context=".view.MainActivity">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:background="@drawable/card_background"
        android:padding="1dp">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:cardCornerRadius="10dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/tvQuestionTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="25dp"
                android:text="@string/questions_title"
                android:textColor="@color/black"
                android:textSize="45sp"
                android:textStyle="bold"
                android:fontFamily="@font/roboto">

            </TextView>

            <TextView
                android:id="@+id/tvTimer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="100dp"
                android:text="@string/timer"
                android:textSize="24sp"
                android:textStyle="bold"
                app:drawableTopCompat="@drawable/baseline_timer_24"
                android:fontFamily="@font/roboto">

            </TextView>


            <TextView
                android:id="@+id/tvQuestions"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="200dp"
                android:gravity="center"
                android:padding="10dp"
                android:text="@string/question"
                android:textSize="20sp"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:fontFamily="@font/roboto">

            </TextView>

            <android.widget.Button
                android:id="@+id/btnOption1"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_alignParentBottom="true"
                android:layout_marginStart="40dp"
                android:layout_marginTop="300dp"
                android:layout_marginEnd="40dp"
                android:layout_marginBottom="40dp"
                android:background="@drawable/button_background"
                android:enabled="true"
                android:onClick="option1Clicked"
                android:text="@string/option1"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:fontFamily="@font/roboto">

            </android.widget.Button>


            <android.widget.Button
                android:id="@+id/btnOption2"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_alignParentBottom="true"
                android:layout_marginStart="40dp"
                android:layout_marginTop="375dp"
                android:layout_marginEnd="40dp"
                android:layout_marginBottom="40dp"
                android:background="@drawable/button_background"
                android:enabled="true"
                android:onClick="option2Clicked"
                android:text="@string/option2"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:fontFamily="@font/roboto">

            </android.widget.Button>

            <android.widget.Button
                android:id="@+id/btnOption3"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_alignParentBottom="true"
                android:layout_marginStart="40dp"
                android:layout_marginTop="450dp"
                android:layout_marginEnd="40dp"
                android:layout_marginBottom="40dp"
                android:background="@drawable/button_background"
                android:enabled="true"
                android:onClick="option3Clicked"
                android:text="@string/option3"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:fontFamily="@font/roboto">

            </android.widget.Button>


            <android.widget.Button
                android:id="@+id/btnOption4"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_alignParentBottom="true"
                android:layout_marginStart="40dp"
                android:layout_marginTop="525dp"
                android:layout_marginEnd="40dp"
                android:layout_marginBottom="40dp"
                android:background="@drawable/button_background"
                android:enabled="true"
                android:onClick="option4Clicked"
                android:text="@string/option4"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:fontFamily="@font/roboto">

            </android.widget.Button>


        </androidx.cardview.widget.CardView>

    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>