<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@drawable/card_background"
    android:layout_margin="20dp"
    android:padding="10dp"
    android:layout_gravity="center"
    tools:context=".view.ResultActivity">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/card_background"
        android:padding="1dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.cardview.widget.CardView
            android:layout_width="350dp"
            android:layout_height="350dp"
            app:cardCornerRadius="10dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="25dp"
                android:fontFamily="@font/roboto"
                android:text="@string/result_title"
                android:textColor="@color/black"
                android:textSize="60sp"
                android:textStyle="bold">

            </TextView>

            <LinearLayout
                android:id="@+id/llOutput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="25dp"
                android:layout_marginTop="125dp"
                android:layout_marginRight="25dp"
                android:background="@drawable/button_background"
                android:gravity="center_horizontal"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tvCorrectAns"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/roboto"
                    android:text="@string/correct_ans"
                    android:textColor="@color/black"
                    android:textSize="75sp">

                </TextView>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/roboto"
                    android:padding="5dp"
                    android:text="@string/slash"
                    android:textColor="@color/black"
                    android:textSize="75sp"
                    android:textStyle="bold">

                </TextView>

                <TextView
                    android:id="@+id/tvTotalAns"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/roboto"
                    android:text="@string/total_ans"
                    android:textColor="@color/black"
                    android:textSize="75sp">

                </TextView>
            </LinearLayout>

            <TextView
                android:id="@+id/tvPerformance"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="260dp"
                android:text="@string/performance_title"
                android:textColor="@color/black"
                android:textSize="45sp"
                android:textStyle="bold|italic">

            </TextView>
        </androidx.cardview.widget.CardView>
    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>